# finrag-research-intelligence

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  chunker.py  docker-compose.yml  graph_rag.py  ground_truth.py  hybrid.py  hyde.py  ingestion_dag.py  interface.py  metrics.py  pyproject.toml  query_expansion.py  requirements.txt  reranker.py  test_pipeline.py
app/: streamlit_app.py
dags/: finrag_ingestion.py
data/eval/: ground_truth.jsonl
data/processed/: chunks.jsonl
data/raw/: corpus.jsonl  corpus_stats.json
scripts/: bootstrap.py
src/: __init__.py
src/eval/: __init__.py  ground_truth.py  metrics.py
src/ingestion/: __init__.py  chunker.py  embedder.py  metadata_loader.py  synthetic_data.py
src/llm/: __init__.py  interface.py
src/retrieval/: __init__.py  graph_rag.py  hybrid.py  hyde.py  query_expansion.py  reranker.py
