[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "finrag-research-intelligence"
version     = "0.1.0"
description = "Production-grade hybrid RAG pipeline for financial research archives"
readme      = "README.md"
requires-python = ">=3.11"

# Core: enough for Streamlit demo, BM25, DuckDB, mock LLM (no torch — avoids
# triton wheels missing on some hosts e.g. Streamlit Cloud Python 3.14).
dependencies = [
    "faker>=24.0",
    "duckdb>=0.10",
    "rank-bm25>=0.2.2",
    "networkx>=3.2",
    "openai>=1.12",
    "anthropic>=0.20",
    "streamlit>=1.32",
    "pandas>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Dense embeddings, vector store, experiment tracking (pulls torch on many platforms).
full = [
    "sentence-transformers>=2.6",
    "qdrant-client>=1.8",
    "mlflow>=2.11",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
]
airflow = [
    "apache-airflow>=2.8",
    "apache-airflow-providers-amazon>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "app*", "dags*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths    = ["test_pipeline.py"]
addopts      = "-v --tb=short"
pythonpath   = ["."]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true